syntax = "proto3";

package containerApi;

option go_package = "../containerApi";


service ImageService {
  rpc CreateImage (CreateImageRequest) returns (CreateImageReply);
  rpc DeleteImage (DeleteImageRequest) returns (DeleteImageReply);
  rpc QueryImageByCondition (QueryImageByConditionRequest) returns (QueryImageByConditionReply);
}


message CreateImageRequest {
  string token = 1;
  string imageAddr = 2;
  string imageDesc = 3;
  string imageName = 4;
  string imageVersion = 5;
  int64 sourceType = 6;
}
message CreateImageReply {
  int64 createdAt = 1;
  string imageId = 2;
  bool status = 3;
}

message DeleteImageRequest {
  string token = 1;
  string imageId = 2;
}
message DeleteImageReply {
  int64 deletedAt = 1;
  bool status = 2;
}

message QueryImageByConditionRequest {
  string token = 1;
  string id = 2;
  int64 pageSize= 3;
  int64 pageIndex= 4;
}
message ImageList {
  string userName  = 1;
  string userId = 2;
  string imageId = 3;
  string imageAddr = 4;
  string imageDesc = 5;
  string imageName = 6;
  string imageVersion = 7;
  int64  imageStatus = 8;
  int64  sourceType = 9;
  string spaceId = 10;
  int64  createdAt = 11;
  int64  updatedAt = 12;
}
message QueryImageByConditionReply {
  repeated ImageList ImageList = 1;
}