syntax = "proto3";

package containerApi;

option go_package = "../containerApi";


service NotebookService {
  rpc CreateNotebook (CreateNoteBookRequest) returns (CreateNoteBookReply);
  rpc DeleteNotebook (DeleteNotebookRequest) returns (DeleteNotebookReply);
  rpc StartNotebook (StartStopNotebookRequest) returns (StartStopNotebookReply);
  rpc StopNotebook (StartStopNotebookRequest) returns (StartStopNotebookReply);
  rpc QueryNotebookByCondition (QueryNotebookByConditionRequest) returns (QueryNotebookByConditionReply);
}


message CreateNoteBookRequest {
  string token = 1;
  string name = 2;
  string description = 3;
  string algorithmId = 4;
  string imageId = 5;
  string resourceSpecId = 6;
}
message CreateNoteBookReply {
  string id = 1;
  bool status = 2;
}

message DeleteNotebookRequest {
  string token = 1;
  string id = 2;
}
message DeleteNotebookReply {
  string id = 1;
  bool status = 2;
}

message StartStopNotebookRequest {
  string token = 1;
  string id = 2;
}
message StartStopNotebookReply {
  string id = 1;
  bool status = 2;
}

message QueryNotebookByConditionRequest {
  string token = 1;
  string id = 2;
  int64 pageSize= 3;
  int64 pageIndex= 4;
}
message NotebookList {
  string containerId  = 1;
  string userId = 2;
  string notebookJobId = 3;
  string notebookUrl = 4;
  string status = 5;
  int64  createdAt = 6;
}
message QueryNotebookByConditionReply {
    repeated NotebookList NoteBookList = 1;
}